[package]
name = "compiler_fuzz"
version = "0.1.0"
edition = "2021"

[dependencies]
compiler_flags_gen = { path = "../compiler_flags_gen" }
argh = "0.1.12"
xshell = "0.2.6"
env_logger = "0.11.3"
anyhow = "1.0.86"
log = "0.4.21"
serde_yaml = "0.9.34"
serde = { version = "1.0.204", features = ["serde_derive"] }
rand = "0.8.5"
